--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="shortcut icon" href="">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/fullpage.css">
   <link href="https://fonts.googleapis.com/css?family=Poppins:500" rel="stylesheet" />
