--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
       </footer>
     </div>
   </div>
-  <script src="js/fullpage.min.js"></script>
-  <script src="js/script.js"></script>
+  <script async src="js/fullpage.min.js"></script>
+  <script async src="js/script.js"></script>
 </body>
 
 </html>
