--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       </footer>
     </div>
   </div>
-  <script async src="js/fullpage.min.js"></script>
+  <script src="js/fullpage.min.js"></script>
   <script async src="js/script.js"></script>
 </body>
 
